SUBDIRS = applogos aptkeys pixmaps

xmldir = $(pkgdatadir)/data/
xml_DATA = $(srcdir)/*.xml

sysiconsdir = $(datadir)/pixmaps
sysicons_DATA = ubuntu-tweak.png

desktopdir = $(datadir)/applications
desktop_DATA = ubuntu-tweak.desktop

EXTRA_DIST = \
	$(xml_DATA) \
	$(sysicons_DATA) \
	$(desktop_DATA)
