## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

ubuntu_tweak_pixmapsdir = $(prefix)/@NO_PREFIX_PACKAGE_PIXMAPS_DIR@

ubuntu_tweak_pixmaps_DATA = \
	ubuntu-tweak-icon.png\
	system.png\
	applications.png\
	desktop.png\
	security.png\
	startup.png\
	ut_header_left.png\
	ut_header_right.png\
	nautilus-file-advanced-permissions.png\
	nautilus-file-permissions.png

EXTRA_DIST = $(ubuntu_tweak_pixmaps_DATA)
