dbusconfdir = /etc/dbus-1/system.d
dbusconf_DATA = com.ubuntu-tweak.Mechanism.conf

dbusservicedir = /usr/share/dbus-1/system-services
dbusservice_DATA = com.ubuntu_tweak.Mechanism.service

policyconfdir = /usr/share/PolicyKit/policy
policyconf_DATA = com.ubuntu-tweak.mechanism.policy

EXTRA_DIST = $(dbusconf_DATA) \
			 $(dbusservice_DATA) \
			 com.ubuntu_tweak.Mechanism.service.in
