dbusconfdir = $(sysconfdir)/dbus-1/system.d
dbusconf_DATA = com.ubuntu-tweak.Mechanism.conf

dbusservicedir = $(datadir)/dbus-1/system-services
dbusservice_DATA = com.ubuntu_tweak.Mechanism.service

policyconfdir = $(datadir)/PolicyKit/policy
policyconf_DATA = com.ubuntu-tweak.mechanism.policy

EXTRA_DIST = $(dbusconf_DATA) \
			 $(policyconf_DATA) \
			 com.ubuntu_tweak.Mechanism.service.in
