## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES = \
	$(PACKAGE_CFLAGS)

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = ubuntu-tweak

ubuntu_tweak_SOURCES = \
	main.c\
	interface.h\
	interface.c\
	ubuntu-tweak.h\
	ubuntu-tweak.c\
	about.c\
	about.h\
	session_page.c\
	session_page.h\
	icon_page.c\
	icon_page.h\
	compiz_page.c\
	compiz_page.h\
	gnome_page.c\
	gnome_page.h\
	nautilus_page.c\
	nautilus_page.h\
	powermanager_page.c\
	powermanager_page.h\
	security_page.c\
	security_page.h\
	fcitx_page.c\
	fcitx_page.h

ubuntu_tweak_LDFLAGS = 

ubuntu_tweak_LDADD =  \
	$(PACKAGE_LIBS)
