SUBDIRS = common

tweak_PYTHON = \
	./ubuntu-tweak.py \
	./LockDown.py \
	./Scripts.py \
	./Nautilus.py \
	./Computer.py \
	./Metacity.py \
	./PowerManager.py \
	./PackageCleaner.py \
	./UpdateManager.py \
	./MainWindow.py \
	./Templates.py \
	./Config.py \
	./ThirdSoft.py \
	./AutoStart.py \
	./UserDir.py \
	./Gnome.py \
	./Session.py \
	./Shortcuts.py \
	./Icon.py \
	./Installer.py \
	./ScriptWorker.py \
	./Compiz.py \
	./Utility.py \
	$(NULL)

tweakdir = $(pkgdatadir)
