SUBDIRS = common

tweak_PYTHON = \
	./autostart.py \
	./updatemanager.py \
	./installer.py \
	./lockdown.py \
	./ScriptWorker.py \
	./mainwindow.py \
	./userdir.py \
	./computer.py \
	./thirdsoft.py \
	./filetype.py \
	./icons.py \
	./metacity.py \
	./session.py \
	./utility.py \
	./templates.py \
	./compiz.py \
	./shortcuts.py \
	./ubuntu-tweak.py \
	./cleaner.py \
	./scripts.py \
	./gnomesettings.py \
	./nautilus.py \
	./powermanager.py \
	./preferences.py \
	./sourceeditor.py \
	$(NULL)

tweakdir = $(pkgdatadir)
