pixmapsdir = $(pkgdatadir)/data/pixmaps
pixmaps_DATA = \
	./autostart.png \
	./image.png \
	./lockdown.png \
	./metacity.png \
	./powermanager.png \
	./banner_right.png \
	./ubuntu-tweak-64.png \
	./installer.png \
	./applications.png \
	./shortcuts.png \
	./sourceeditor.png \
	./ubuntu-tweak.png \
	./userdir.png \
	./system.png \
	./desktop.png \
	./third-soft.png \
	./welcome.png \
	./history.png \
	./nautilus-cd-burner.png \
	./root.png \
	./session.png \
	./templates.png \
	./banner_left.png \
	./compiz-fusion.png \
	./icon.png \
	./package.png \
	./computer.png \
	./startup.png \
	./splash.png \
	./personal.png \
	./gnome.png \
	./nautilus.png \
	./scripts.png \
	$(NULL)

EXTRA_DIST = $(pixmaps_DATA)
