scriptsdir = $(pkgdatadir)/data/scripts
scripts_DATA = \
	move-to \
	move-to-desktop \
	move-to-download \
	move-to-home \
	copy-to \
	copy-to-desktop \
	copy-to-download \
	copy-to-home \
	link-to \
	link-to-desktop \
	link-to-download \
	link-to-home \
	search-in-current \
	set-image-as-wallpaper \
	convert-image-to-jpg \
	convert-image-to-png \
	open-with-gedit \
	open-with-gedit-as-root \
	browse-as-root \
	$(NULL)

EXTRA_DIST = $(scripts_DATA)
