SUBDIRS = policykit widgets

common_PYTHON = \
	./settings.py \
	./download.py \
	./inifile.py \
	./package.py \
	./__init__.py \
	./config.py \
	./appdata.py \
	./utils.py \
	./consts.py \
	./canvas.py \
	./factory.py \
	./systeminfo.py \
	$(NULL)

commondir = $(pkgdatadir)/common

nodist_consts_DATA = consts.py
constsdir = $(pkgdatadir)/common

EXTRA_DIST = consts.py.in
