SUBDIRS = policykit widgets

common_PYTHON = \
	./settings.py \
	./download.py \
	./inifile.py \
	./debug.py \
	./package.py \
	./__init__.py \
	./config.py \
	./appdata.py \
	./utils.py \
	./consts.py \
	./gui.py \
	./misc.py \
	./canvas.py \
	./factory.py \
	./systeminfo.py \
	./misc.py \
	./notify.py \
	$(NULL)

commondir = $(pkgdatadir)/common

nodist_consts_DATA = consts.py
constsdir = $(pkgdatadir)/common

EXTRA_DIST = consts.py.in
